--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,3 +11,19 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+
+      - name: Setup Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub # prepares the environment. 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.dockeruser }} # github secrets
+          password: ${{ secrets.dockertoken }} # github secrets
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.dockeruser }}/catexer-actions:latest
