--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
             pwd
             ls
-            docker-compose build --no-cache
+            docker compose build --no-cache
             docker tag IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:latest
         env:
             IMAGE_NAME: ${{ env.IMAGE_NAME }}
