--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -58,6 +58,7 @@ jobs:
             IMAGE_TAG: ${{ env.IMAGE_TAG }}
   test:
     runs-on: ubuntu-latest
+    needs: build # ensures that the build job has completed successfully.
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -77,7 +78,8 @@ jobs:
       - name: Run Project
         run: |
             ls
-            docker compose up -d --pull
+            docker images
+            docker compose up -d --pull always
             sleep 1
             docker compose ps
       
