--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -93,6 +93,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test # ensures that the test job has completed successfully.
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      
       - name: Install AWS CLI
         run: |
           set -ex
@@ -147,3 +150,34 @@ jobs:
                     --output text)
                 
            echo "PUBLIC_IP=$PUBLIC_IP" >> $GITHUB_ENV
+      
+      - name: check ssh connection status
+        run: |
+            set -ex
+            while ! nc -z ${{ env.PUBLIC_IP }} 22; do
+                echo "waiting for ssh test to succeed.."
+                sleep 3
+            done
+
+      - name: install ssh client
+        run: |
+            set -ex
+            sudo apt-get update
+            sudo apt-get install -y openssh-client
+
+      - name: scp and ssh
+        run: |
+            set -ex
+            ls -ltra
+            scp -i ${{ secrets.SSH_PRIVATE_KEY }} -o StrictHostKeyChecking=no \
+                docker-compose.yaml \
+                init.sql \
+                ec2-user@${{ env.PUBLIC_IP }}:/home/ec2-user/
+
+            ssh -i ${{ secrets.SSH_PRIVATE_KEY }} -o StrictHostKeyChecking=no ec2-user@${{ env.PUBLIC_IP }} << EOF
+                newgrp docker
+                cd /home/ec2-user/
+                docker --version
+                docker-compose --version
+                docker-compose up -d --quiet-pull
+                << EOF
