modified cicd an tf to use image tag var from workflow in ec2 docker compose up in tf.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -89,6 +89,8 @@ jobs:
           aws-region: us-east-1
 
       - name: Terraform Apply
+        env:
+          TF_VAR_image_tag: "0.0.${{ github.run_number }}"
         run: terraform apply -auto-approve
 
 
