--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,20 +66,22 @@ jobs:
             echo "port being tested: ${{ env.PORT }}"
             curl -f http://localhost:${{ env.PORT }}
 
-  deploy: # using terraform to deploy to aws ec2.
+  deploy:
     runs-on: ubuntu-latest
     needs: build-Test # ensures that the build-test job has completed successfully.
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup Terraform
+      - name: setup Terraform
         uses: hashicorp/setup-terraform@v2
         with: 
           terraform_wrapper: false
 
       - name: Terraform Init
-        run: terraform init 
+        run: |
+          cd azure-k8s
+          terraform init 
 
       - name: Configure AWS Credentials # can be used also without built action, but it is recommended.
         uses: aws-actions/configure-aws-credentials@v2 # with aws configure set commands.
@@ -90,11 +92,57 @@ jobs:
 
       - name: Terraform Apply
         env:
-          TF_VAR_image_tag: "0.0.${{ github.run_number }}"
-        run: terraform apply -auto-approve
+          TF_VAR_azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
+          TF_VAR_azure_client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          TF_VAR_azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+        run: |
+          cd azure-k8s
+          terraform apply -auto-approve
 
 
-  # disabled k8s deploy job temporarily for terraform testing with aws deploy.
+
+
+
+
+  # disabled terraform exer 6 deploy with docker-compose temporarily 25/1.
+
+  # deploy: # using terraform to deploy to aws ec2.
+  #   runs-on: ubuntu-latest
+  #   needs: build-Test # ensures that the build-test job has completed successfully.
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
+
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v2
+  #       with: 
+  #         terraform_wrapper: false
+
+  #     - name: Terraform Init
+  #       run: terraform init 
+
+  #     - name: Configure AWS Credentials # can be used also without built action, but it is recommended.
+  #       uses: aws-actions/configure-aws-credentials@v2 # with aws configure set commands.
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: us-east-1
+
+  #     - name: Terraform Apply
+  #       env:
+  #         TF_VAR_image_tag: "0.0.${{ github.run_number }}"
+  #       run: terraform apply -auto-approve
+
+
+
+
+
+
+
+
+
+  # disabled k8s deploy job to google cloud sela - temporarily for terraform testing with aws deploy 17/1.
+
   # deploy-k8s:
   #   runs-on: ubuntu-latest
   #   needs: test # ensures that the test job has completed successfully to proceed.
