--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -73,6 +73,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: setup SSH PRIVATE KEY for terraform future remote-exec
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_AWS_PRIVATE_KEY }}" > ~/.ssh/my-aws-key.pem
+          chmod 600 ~/.ssh/my-aws-key.pem
+
       - name: setup Terraform
         uses: hashicorp/setup-terraform@v2
         with: 
