--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -68,7 +68,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-Test # ensures that the build-test job has completed successfully.
+    needs: build-Test # ensures that the build-test job has completed successfully, 7.
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -147,7 +147,7 @@ jobs:
 
 
 
-  # disabled k8s deploy job to google cloud sela - temporarily for terraform testing with aws deploy 17/1.
+  # disabled k8s deploy job - k8s lerning exer - to google cloud sela - temporarily for terraform testing with aws deploy 17/1.
 
   # deploy-k8s:
   #   runs-on: ubuntu-latest
