--- a/k8s-config/flask-k8s.yaml
+++ b/k8s-config/flask-k8s.yaml
@@ -17,6 +17,14 @@ spec:
       containers:
       - name: flask-app
         image: crazyguy888/catexer-actions:latest
+        imagePullPolicy: Always
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 5000
         env:
