--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,53 +66,74 @@ jobs:
             echo "port being tested: ${{ env.PORT }}"
             curl -f http://localhost:${{ env.PORT }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-Test # ensures that the build-test job has completed successfully, 7.
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+  # deploy: # exer 7 v2 deploy with azure k8s terraform k8s infrastructure, 27/1.
+  #   runs-on: ubuntu-latest
+  #   needs: build-Test # ensures that the build-test job has completed successfully.
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
 
-      - name: setup SSH PRIVATE KEY for terraform future remote-exec
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_AWS_PRIVATE_KEY }}" > ~/.ssh/my-aws-key.pem
-          chmod 600 ~/.ssh/my-aws-key.pem
 
-      - name: setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with: 
-          terraform_wrapper: false
 
-      - name: Terraform Init
-        run: |
-          cd azure-k8s
-          terraform init 
 
-      - name: Configure AWS Credentials # can be used also without built action, but it is recommended.
-        uses: aws-actions/configure-aws-credentials@v2 # with aws configure set commands.
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
 
-      - name: Terraform Apply
-        env:
-          TF_VAR_azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
-          TF_VAR_azure_client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-          TF_VAR_azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
-        run: |
-          cd azure-k8s
-          terraform apply -auto-approve
 
-      - name: Cleanup - Terraform Destroy
-        env:
-          TF_VAR_azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
-          TF_VAR_azure_client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-          TF_VAR_azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
-        run: |
-          cd azure-k8s
-          terraform destroy -auto-approve
+
+
+
+  # disabled terraform exer 7 v1 deploy with ec2 and azure k8s temporarily 26/1. 
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build-Test # ensures that the build-test job has completed successfully, 7.
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
+
+  #     - name: setup SSH PRIVATE KEY for terraform future remote-exec
+  #       run: |
+  #         mkdir -p ~/.ssh
+  #         echo "${{ secrets.SSH_AWS_PRIVATE_KEY }}" > ~/.ssh/my-aws-key.pem
+  #         chmod 600 ~/.ssh/my-aws-key.pem
+
+  #     - name: setup Terraform
+  #       uses: hashicorp/setup-terraform@v2
+  #       with: 
+  #         terraform_wrapper: false
+
+  #     - name: Terraform Init
+  #       run: |
+  #         cd azure-k8s
+  #         terraform init 
+
+  #     - name: Configure AWS Credentials # can be used also without built action, but it is recommended.
+  #       uses: aws-actions/configure-aws-credentials@v2 # with aws configure set commands.
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: us-east-1
+
+  #     - name: Terraform Apply
+  #       env:
+  #         TF_VAR_azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
+  #         TF_VAR_azure_client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+  #         TF_VAR_azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+  #       run: |
+  #         cd azure-k8s
+  #         terraform apply -auto-approve
+
+  #     - name: Cleanup - Terraform Destroy
+  #       env:
+  #         TF_VAR_azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
+  #         TF_VAR_azure_client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+  #         TF_VAR_azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+  #       run: |
+  #         cd azure-k8s
+  #         terraform destroy -auto-approve
+
+
+
+
 
 
 
@@ -147,6 +168,10 @@ jobs:
   #       env:
   #         TF_VAR_image_tag: "0.0.${{ github.run_number }}"
   #       run: terraform apply -auto-approve
+
+
+
+
 
 
 
