--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -92,6 +92,7 @@ jobs:
           client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          auth-type: SERVICE_PRINCIPAL
 
       - name: Terraform Init
         env:
