updated values.yaml inside charts dir to check for ci and update of pods in the new helm manual install package.

--- a/.github/workflows/helm-ci.yml
+++ b/.github/workflows/helm-ci.yml
@@ -29,6 +29,7 @@ jobs:
               run: |
                 cd charts/helm-flask
                 sed -i "s/version: .*/version: 0.0.${{ github.run_number }}/g" ./Chart.yaml
+                echo "# this file was modified by a ci to update helm version tagging" >> ./Chart.yaml
 
             - name: Package Helm Chart
               run: |
