--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -91,19 +91,19 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Setup google cloud service account credentials
+      - name: Setup google cloud service account credentials # env configuring for terraform commands.
         run: | 
           echo '${{ secrets.GCP_SA_KEY }}' | base64 --decode > /tmp/key.json
           echo "GOOGLE_APPLICATION_CREDENTIALS=/tmp/key.json" >> $GITHUB_ENV
 
-      - name: Install gcloud CLI
+      - name: Install gcloud CLI # for cli commands
         uses: google-github-actions/setup-gcloud@v1
 
-      - name: login to gcloud
+      - name: login to gcloud # using service account as a credential to login to gcloud cli.
         run: |
           gcloud auth activate-service-account --key-file=/tmp/key.json
 
-      - name: verify gcloud login
+      - name: verify gcloud login # debug.
         run: |
           set -x
           gcloud auth list
@@ -129,15 +129,15 @@ jobs:
             helm repo update
             helm search repo flaskrepo --versions
 
-      - name: install GKE google plugin # plugin to connect to gke cluster
+      - name: install GKE google plugin # a must install google plugin to connect to gke cluster
         run: |
             gcloud components install gke-gcloud-auth-plugin
 
-      - name: List GKE Clusters (Debug)
+      - name: List GKE Clusters # debug.
         run: |
             gcloud container clusters list --project ${{ secrets.GCP_PROJECT_ID }}
           
-      - name: Set GKE Context to connect to cluster
+      - name: Set GKE Context to connect to cluster # runner is connecting to cluster.
         run: |
             gcloud container clusters get-credentials \
               ${{ secrets.GCP_CLUSTER_NAME }} \
@@ -153,7 +153,7 @@ jobs:
             --set flaskApp.tag=${IMAGE_TAG}
           helm list
 
-# --no-build in production environment. 
+# --no-build in production environment.
 # ${IMAGE_TAG} is referenced from top level env variable IMAGE_TAG up there.
 # --set flag overrides default value in values.yaml which is
 # passed to flask deployment in deployment-flask.yaml so image tag is changed everytime.
