--- a/charts/helm-flask/templates/service-flask.yaml
+++ b/charts/helm-flask/templates/service-flask.yaml
@@ -9,6 +9,7 @@ spec:
   selector:
     app: flask-app
   ports:
-  - protocol: TCP
+  - name: http
+    protocol: TCP
     port: 80
     targetPort: {{ .Values.flaskApp.port }}
